@@ -1,6 +1,7 @@
 2.0.0-beta03
-- Fixed: Clipped text in changelog
 - Improved: Updated translations
+- Fixed: Search field didn't appear after going back to stock or shopping list (#421)
+- Fixed: Clipped text in changelog
 
 2.0.0-beta02
 - New: Almost all stock settings are now available (#395)
